Clarify opening sentence of MD/GB paragraph

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -404,16 +404,14 @@ furrow is causally linked to an increase in the frequency and in the
 magnitude of ectopic folding during <em>Drosophila</em>
 gastrulation.</p>
 <!--TODO:AB: Quantify the variability of ectopic folds in some way (plot it)-->
-<p>The variability in the positioning of ectopic fold formation in
-cephalic furrow mutants, and the less frequent occurrence of smaller
-ectopic folds in <em>prd</em> and wildtype embryos, suggests that they
-are not under genetic control comparable to the cephalic furrow and may
-form as a result of physical interactions in the tissue. We investigated
-two concurrent gastrulation processes that could drive their formation:
-cell divisions in mitotic domains and the extension of the germ band.
-Mitotic domains are groups of blastoderm cells that divide in synchrony
-during the cleavage cycle 14<span class="citation"
-data-cites="Foe1989-cw"><sup><a href="#ref-Foe1989-cw"
+<p>The variable positions and frequency of ectopic folding suggests that
+they are not under genetic control comparable to that of the cephalic
+furrow, but that they may form as a result of physical interactions in
+the tissue. We investigated two concurrent gastrulation processes that
+could drive their formation: cell divisions in mitotic domains and the
+extension of the germ band. Mitotic domains are groups of blastoderm
+cells that divide in synchrony during the cleavage cycle 14<span
+class="citation" data-cites="Foe1989-cw"><sup><a href="#ref-Foe1989-cw"
 role="doc-biblioref">5</a></sup></span>. The first mitotic domains in
 <em>Drosophila</em> appear in the head around 20 min after
 gastrulation<span class="citation" data-cites="Foe1989-cw"><sup><a
