Improve reasoning for trunk-germ strain rate

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -422,10 +422,9 @@ between or adjacent to mitotic domains (Figure <a
 href="#fig:mitotic">2</a>a). The dividing cells synchronously lose their
 basal attachment, round up at the apical side, and more than double
 (2.3x) their apical area during anaphase elongation (Figure <a
-href="#fig:apical">S3</a>).
-<!--TODO:AB: Are there force measurements?--> This expansion compresses
-the adjacent non-dividing cells which are the first to infold, followed
-by a portion of the dividing cells within mitotic domains (Figure <a
+href="#fig:apical">S3</a>). This expansion compresses the adjacent
+non-dividing cells which are the first to infold, followed by a portion
+of the dividing cells within mitotic domains (Figure <a
 href="#fig:mitotic">2</a>b). Mitotic expansions always precede ectopic
 folding (Figure <a href="#fig:mitotic">2</a>c, Figure <a
 href="#fig:initiator">S1</a>a). Compared to the progressive invagination
@@ -439,21 +438,23 @@ strain rate 1.3x higher than sibling controls with a peak that coincides
 with the maximum expansion of mitotic domains and with the appearance of
 the ectopic folds (Figure <a href="#fig:mitotic">2</a>d,e, Figure <a
 href="#fig:strain">S4</a>, <a href="#fig:vid-strain-rate">Video 6</a>).
-We have also quantified the strain rate more posterior where the trunk
-tissue interacts with the tip of the germ band (trunk–germ).
-<!--TODO:PT: I have considered rewriting this in a way that not all folds happen between two adjacent mitotic domains. Some occur posterior to MD6 where the source of compression must be different. We hypothesize it is germ band. But it didn’t work. Maybe think about whether this could be a useful transition. Here it seems forced. We have also looked at strain rate in this region but why?-->
-At the trunk–germ interface, the strain rate is lower than at the
-head–trunk, but it steadily increases over time probably driven by the
-extending germ band (Figure <a href="#fig:mitotic">2</a>d). The
-epithelial cells between the Mitotic Domain 6 (MD6) and the germ band
-tip are indeed more compressed in <em>btd</em> mutants compared to
-sibling controls, as inferred from the greater reduction in their apical
-area (Figure <a href="#fig:mitotic">2</a>e), and often form ectopic
-folds (Figure <a href="#fig:mitotic">2</a>a,c). Taken together, these
-analyses suggest the expansion of mitotic domains, and the extension of
-the germ band are potential sources of mechanical stress to the
-epithelial monolayer, and that they may be involved in the formation of
-ectopic folds by tissue buckling.</p>
+However, for the ectopic folds that often form posterior to the Mitotic
+Domain 6 (MD6) (Figure <a href="#fig:mitotic">2</a>a,c), the source of
+compression must be different; we hypothesized the germ band is
+contributing. Therefore, we have also quantified the strain rate at this
+posterior region where the trunk tissue interacts with the tip of the
+germ band (trunk–germ). At this trunk–germ interface, the strain rate is
+lower than at the head–trunk, but it steadily increases over time
+probably driven by the extending germ band (Figure <a
+href="#fig:mitotic">2</a>d). The epithelial cells between MD6 and the
+germ band tip are indeed more compressed in <em>btd</em> mutants
+compared to sibling controls, as inferred from the greater reduction in
+their apical area (Figure <a href="#fig:mitotic">2</a>e). Taken
+together, these analyses suggest the expansion of mitotic domains, and
+the extension of the germ band are potential sources of mechanical
+stress to the epithelial monolayer, and that they may be involved in the
+formation of ectopic folds by tissue buckling.</p>
+<!--TODO:AB: Are there force measurements?-->
 <!--TODO: Include cell shape analyses with density et al. around here-->
 <!--TODO: Quantify compression of trunk-germ cells in btd mutants-->
 <p>To determine the relative contribution of mitotic domains and germ
