Add n and scale bar values for fig1

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1237,7 +1237,6 @@ revisions. AS was supported by funding from the European Union’s Horizon
 (PRIME). BCV was supported by an EMBO Long Term Fellowship (ALTF
 74-2018), and by an European Research Council Advanced Grant (ERC-AdG
 885504 GHOSTINTHESHELL) awarded to PT.</p>
-<!--TODO: Ask about MBC, AK, and CDM funding-->
 <h1 id="author-contributions">Author contributions</h1>
 <p>BCV and PT conceived the study. BCV designed the experiments,
 generated the fly stocks, performed the live imaging and image
@@ -1622,7 +1621,7 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
-alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about seven minutes after gastrulation in wildtype and btd heterozygotes, and is delayed in eve and prd heterozygotes. Ectopic folds form after 20 min post gastrulation in all genotypes. One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants.  g, Folded area in a representative btd mutant and sibling control visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
+alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about seven minutes after gastrulation in wildtype and btd heterozygotes, and is delayed in eve and prd heterozygotes. Ectopic folds form after 20 min post gastrulation in all genotypes. One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n = 6). Scale bars = 50µm.  g, Folded area in a representative btd mutant and sibling control visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
 <figcaption aria-hidden="true"><span>Figure 1:</span> Formation of
 ectopic folds in cephalic furrow mutants. <strong>a</strong>, Overview
 of key developmental events using a standard developmental staging<span
@@ -1642,24 +1641,25 @@ role="doc-biblioref">45</a></sup></span>. <strong>b</strong>, Profile
 view of wildtype and <em>prd</em> embryos (early stage 8), and
 <em>btd</em> and <em>eve</em> embryos (late stage 8) showing the
 divergent morphology of the cephalic furrow and ectopic folds,
-respectively. <strong>c</strong>, Lateral view of sibling controls
-(heterozygotes) and mutant embryos (<em>btd</em> or <em>eve</em>
-homozygotes). The arrows indicate epithelial folds, the asterisks
-indicate the position of mitotic domains, and the percentages indicate
-the extent of germ band extension relative to the egg length.
-<strong>d</strong>, Timing of formation of cephalic furrow and ectopic
-folds in different genetic backgrounds. The cephalic furrow forms about
-seven minutes after gastrulation in wildtype and <em>btd</em>
-heterozygotes, and is delayed in <em>eve</em> and <em>prd</em>
-heterozygotes. Ectopic folds form after 20 min post gastrulation in all
-genotypes. One dot represents one embryo. <strong>e</strong>, Percentage
-of germ band extension at the time of formation of the cephalic furrow
-and ectopic folds in different genetic backgrounds. The cephalic furrow
-appears at 10% germ band extension, except in <em>prd</em> heterozygotes
-where it varies up to 40%. Ectopic folds form at 30–35% germ band
-extension. <strong>f</strong>, Variability in the distribution of the
-cephalic furrow in sibling controls (<em>btd</em> heterozygotes) and of
-the ectopic folds in <em>btd</em> mutants.
+respectively. Scale bars = 20µm. <strong>c</strong>, Lateral view of
+sibling controls (heterozygotes) and mutant embryos (<em>btd</em> or
+<em>eve</em> homozygotes). The arrows indicate epithelial folds, the
+asterisks indicate the position of mitotic domains, and the percentages
+indicate the extent of germ band extension relative to the egg length.
+Scale bars = 50µm. <strong>d</strong>, Timing of formation of cephalic
+furrow and ectopic folds in different genetic backgrounds. The cephalic
+furrow forms about seven minutes after gastrulation in wildtype and
+<em>btd</em> heterozygotes, and is delayed in <em>eve</em> and
+<em>prd</em> heterozygotes. Ectopic folds form after 20 min post
+gastrulation in all genotypes. One dot represents one embryo.
+<strong>e</strong>, Percentage of germ band extension at the time of
+formation of the cephalic furrow and ectopic folds in different genetic
+backgrounds. The cephalic furrow appears at 10% germ band extension,
+except in <em>prd</em> heterozygotes where it varies up to 40%. Ectopic
+folds form at 30–35% germ band extension. <strong>f</strong>,
+Variability in the distribution of the cephalic furrow in sibling
+controls (<em>btd</em> heterozygotes) and of the ectopic folds in
+<em>btd</em> mutants (n = 6). Scale bars = 50µm.
 <!--TODO:AB: Add sampling numbers in the legend here and in the figure panels-->
 <strong>g</strong>, Folded area in a representative <em>btd</em> mutant
 and sibling control visualized in a cartographic projection of the
